# nwep

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
.github/workflows/: build.yml
cmake/: FindBlst.cmake  FindOpenSSL.cmake  PickyWarningsC.cmake  nwepConfig.cmake.in  toolchain-aarch64-linux.cmake  toolchain-arm-linux-gnueabihf.cmake  toolchain-arm-none-linux-gnueabihf.cmake  toolchain-mingw32.cmake  toolchain-mingw64.cmake
include/nwep/: nwep.h  version.h.in
node/: package-lock.json  package.json
node/binding/: CMakeLists.txt  nwep_napi.c  nwep_napi.h  nwep_napi_addr.c  nwep_napi_anchor.c  nwep_napi_cache.c  nwep_napi_client.c  nwep_napi_conn.c  nwep_napi_constants.c  nwep_napi_crypto.c  nwep_napi_encoding.c  nwep_napi_error.c  nwep_napi_handshake.c  nwep_napi_identity.c  nwep_napi_log.c  nwep_napi_merkle.c  nwep_napi_msg.c  nwep_napi_role.c  nwep_napi_server.c  nwep_napi_stream.c  nwep_napi_trust.c
node/lib/: index.d.ts  index.js
node/test/: basic.test.js
src/: config.h.in  nwep_addr.c  nwep_anchor.c  nwep_base58.c  nwep_base64.c  nwep_cache.c  nwep_client.c  nwep_conn.c  nwep_crypto.c  nwep_err.c  nwep_handshake.c  nwep_internal.h  nwep_key_lifecycle.c  nwep_log.c  nwep_merkle.c  nwep_msg.c  nwep_quic.c  nwep_reqresp.c  nwep_role.c  nwep_server.c  nwep_stream.c  nwep_tls.c  nwep_trust.c  nwep_version.c
tests/: test_anchor.c  test_cache.c  test_handshake.c  test_harness.c  test_harness.h  test_integration.c  test_key_lifecycle.c  test_logging.c  test_merkle_log.c  test_notify.c  test_role.c  test_trust.c  test_web1_handshake.c
